# Integra.AI

./: .env.example  .gitignore  README.md  pyproject.toml  tmp_post.py  vercel.json
.github/workflows/: ci.yml  release.yml  vercel.yml
.integra/: config.json
integra_ai/: cli.py
integra_ai/ai/: gemini.py
integra_ai/core/: config.py  generator.py  logger.py  storage.py  testing.py
integra_ai/templates/: python_client_template.py
integrations/integration/: generated_20251031_083819.py  integration.json
integrations/teste-httpbin/: integration.json
landing/: README.md  index.html  styles.css
scripts/: install.ps1
tests/ai/: test_gemini.py
web/: app.py
web/templates/: index.html
